# SCA

./: README.md  Readme.rst  pyproject.toml  ukr_version.adoc
spy_cat_agency/: Dockerfile  docker-compose.yml  pyproject.toml
spy_cat_agency/cats/: models.py  serializers.py  urls.py  views.py
spy_cat_agency/docs/source/: conf.py  index.rst
spy_cat_agency/docs/source/modules/: all-about-me.rst  cats.migrations.rst  cats.rst  missions.migrations.rst  missions.rst  modules.rst  spy_cat_agency.rst
spy_cat_agency/missions/: admin.py  models.py  serializers.py  urls.py  views.py
spy_cat_agency/spy_cat_agency/: settings.py  urls.py
